...
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:id="@+id/cart_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shipping Details"
            android:textColor="@color/white"
...
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
...
            android:textSize="16dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipName"
            android:focusable="true"
            android:clickable="true"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Name"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipPhone"
            android:textColorHint="#AE636363"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Phone no."
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipAddress"
            android:focusable="true"
            android:clickable="true"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
...
        android:layout_marginTop="-68dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/confirmOrder"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="Total Price:"
            android:textColor="@color/black"
            android:textSize="18dp" />
...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:background="@color/black"
            android:elevation="15dp"
            android:gravity="center"
            android:text="PLACE ORDER"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>
