...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/home_layout"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:background="@color/white"
                    android:backgroundTint="@color/white">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes1"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes3"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                android:layout_height="370dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewAllProducts"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:text="VIEW ALL"
                android:textSize="18dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
...
